<resources>
    <string name="app_name">Emerald BLE</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shiva Kumaran</string>
    <string name="nav_header_subtitle">shiv@crisp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_phone_msg">Automatic call will be triggered when geo fence gets breached</string>
    <string name="pref_phone_title">Phone Call</string>
    <string name="pref_sms_msg">As soon as Geo fence gets breached, Your contacts will receive SMS</string>
    <string name="pref_sms_title">Message(SMS)</string>
    <string name="pref_location_msg">Your location will be periodically sent to Web dashboard</string>
    <string name="pref_location_title">Location Sharing</string>
    <string name="pref_geo_msg">Keep Geo fence settings active</string>
    <string name="pref_geo_title">Geo fence</string>
    <string name="pref_aut_msg">Automatic theft alert settings</string>
    <string name="pref_aut_title">Auto theft alert</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="my_devices">MY DEVICES</string>
    <string name="action_view">action_view</string>
    <string name="action_logout">Logout</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_txt">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="title_activity_track">Map</string>
    <string name="object_name">Object Name</string>
    <string name="hybrid">Hybrid</string>
    <string name="regular">Regular</string>
    <string name="search">Search</string>
    <string name="enter_mac">Enter the mac address</string>
    <string name="contact_num1">Contact number 1</string>
    <string name="contact_num1E">Enter contact number1</string>
    <string name="contact_num2">Contact number 2</string>
    <string name="contact_num2E">Enter contact number 2</string>
    <string name="contact_num3">Contact number 3</string>
    <string name="contact_num3E">Enter contact number 3</string>
    <string name="mac_address">Mac address</string>
    <string name="sms_content">SMS Content</string>
    <string name="enable_sharing">Enable sharing</string>
    <string name="set_timings">Set Timings</string>
</resources>
