
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_phone"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_phone_msg"
        android:title="@string/pref_phone_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_sms"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_sms_msg"
        android:title="@string/pref_sms_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_location"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_location_msg"
        android:title="@string/pref_location_title" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="example_geofence"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_geo_msg"
        android:title="@string/pref_geo_title" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="example_auto"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_aut_msg"
        android:title="@string/pref_aut_title" />


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
        -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
