<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always" />
    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:title="refresh"
        android:visible="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:visible="false"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
