<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:background="@drawable/tool_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/layout_bg"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Device"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            style="@style/tvMacAddrLay"
            android:text="@string/mac_address" />

        <EditText
            style="@style/etMacAddrLay"
            android:id="@+id/etMacAddress"
            android:inputType="textPersonName"
            android:hint="@string/enter_mac" />

        <TextView
            style="@style/tvMacAddrLay"
            android:text="@string/contact_num1" />

        <EditText
            style="@style/etMacAddrLay"
            android:id="@+id/etContactNumber1"
            android:inputType="number"
            android:hint="@string/contact_num1E" />

        <TextView
            style="@style/tvMacAddrLay"
            android:text="@string/contact_num2"/>

        <EditText
            style="@style/etMacAddrLay"
            android:id="@+id/etContactNumber2"
            android:inputType="number"
            android:hint="@string/contact_num2E" />

        <TextView
            style="@style/tvMacAddrLay"
            android:text="@string/contact_num3"/>


        <EditText
            style="@style/etMacAddrLay"
            android:id="@+id/etContactNumber3"
            android:inputType="number"
            android:hint="@string/contact_num2E"/>


        <TextView
            style="@style/tvMacAddrLay"
            android:text="@string/sms_content"/>



        <EditText
            android:id="@+id/etSmsContent"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:inputType="text|textMultiLine"
            android:hint="Type here.."
            android:background="@drawable/tv_bg"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="top"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:id="@+id/btnSave"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@color/orange"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>