<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".BaseLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/emerald_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="#66FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:padding="10dp"
                    android:src="@drawable/username" />

                <View
                    android:layout_width="4px"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColorHint="#f2f2f2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="#66FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:padding="11dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/password" />

                <View
                    android:layout_width="4px"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColorHint="#f2f2f2" />
            </LinearLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/orange"
                android:onClick="onLoginPressed"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forgotBtn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:onClick="forgetpassord"
                android:text="Chnage your Password"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>
